# AgentsTemplate

./: .env.example  .gitignore  README.md  pyproject.toml
.github/agents/: researcher.agent.md
.github/instructions/: workspace.instructions.md
.github/prompts/: summarize.prompt.md
.github/skills/file-review/: SKILL.md
.github/workflows/: ci.yml  deploy-staging.yml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/k8s/base/: deployment.yaml  service.yaml
deployment/k8s/overlays/staging/: kustomization.yaml
src/app/: main.py
src/config/: settings.py
src/core/: agent_runner.py  markdown_loader.py
src/providers/: base.py  factory.py  gemini.py  github_models.py  openai_compatible.py
templates/: github-copilot-sso.md
tests/: test_provider_factory.py
